force-app/main/default/objects/Error_Log__c/fields/Log_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Log_Date_Time__c</fullName>
    <description>Timestamp de quando a falha de sistema ocorreu.</description>
    <inlineHelpText>Registra o momento exato em que o erro foi gerado.</inlineHelpText>
    <label>Log Date/Time</label>
    <type>DateTime</type>
</CustomField>