force-app/main/default/objects/Error_Log__c/fields/Log_Details__c.field-meta.xml
<CustomField>
    <fullName>Log_Details__c</fullName>
    <description>Conteúdo completo da mensagem de erro e stack trace.</description>
    <inlineHelpText>Exibe os detalhes técnicos sobre a falha ocorrida.</inlineHelpText>
    <label>Log Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>