force-app/main/default/objects/Error_Log__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <description>Identificação do recurso Apex ou automação que falhou.</description>
    <inlineHelpText>Indica o nome da classe ou gatilho que disparou o erro.</inlineHelpText>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>